tests/expectations/compiler/function/empty_arglist_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372113]: Cannot define a function with no parameters.
    --> compiler-test:4:5
     |
   4 |     function x() -> u8 {
   5 |         return 0u8;
   6 |     }
     |     ^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {
     | ^^^^^^^^^^^^
"""]
